--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.10"
+    "vue-router": "^4.0.10",
+    "socket.io-client": "^4.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
